Next
====
- Added 'showrawvalue' config option for inforenderer. See documentation for
  more details.

0.21.0
======
- #3 Add "Save an continue" Button. For forms with multiple pages formbar now
  renders a Save and continue submit button. An application can exime the
  request if the user has clicked this button to set active the next page on
  rendering.
- Add support for HTML code in help blocks.
- Added support to define validators directly in the form config.

0.20.3
======
- Allow user defined values on form initialisation. Needed for specific rules
  evaluations which relay on external data.
- Added "ignore" attribute to buttons to allow rendering forms with no
  buttons at all.

0.20.2
======
Bugfixes.

0.20.1
======
Bugfixes.

0.20.0
======
Large rewrite of the Javascript part and large parts of formbar to make
formbar more dynamic in case of showing messages on errors and warnings.

0.18.3
======
- Fixed selection filtering with user provided values.

0.18.2
======
- Fixed error on evaluating checkboxes.

0.18.1
======
- Fixed error that submitted unsaved values are not displayed in the form again if the
  form contains errors. This results in loosing the new entered data.
- Fixed error of dataloss in case of readonly checkbox fields on submit.

0.18.0
======
- Added new HTML directive. This can be used to insert custom html code in the
  form e.g lists and images.
- Improved performance: Do not build rules on loading a form configuration.
  Only build rules if they are actually needed (On rules evaluation). This
  improves the performance by almost factor of 2.
- Make simple left aligned numbering of textfield renderers work again.
- Added "maxlength" attribute to textareas. If set a small indicator is shown
  below the textfield counting the remaining chars.
- Gray out sections and text areas too if a conditional is inactive.
- Allow filtering of options in user defined options based on additional
  attribute in the option.

0.17.5
======